# burner

./: README.md  file1.txt  file2.txt  file3.txt  file5.txt
_builds/: cmake_install.cmake
example-project/: CMakeLists.txt  example.cpp  python_code_example.py
make_example/: foo.cpp
make_example/_builds/: CMakeCache.txt  Makefile
project_1/: CMakeLists.txt
sk_b_c_example_c/: CMakeLists.txt  example.c
sk_b_c_example_pybind11/: CMakeLists.txt  pyproject.toml  python_code_example.py
sk_b_c_example_swig/: CMakeLists.txt
